include videos directory with custom bsconfig

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,4 +1,11 @@
 {
+    "files": [
+        "source/**/*",
+        "components/**/*",
+        "images/**/*",
+        "manifest",
+        "videos/**/*"
+    ],
     "rootDir": "source",
     "stagingDir": "dist",
     "retainStagingDir": true,
